add mybatis jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,55 @@ web3.httpTimeoutSeconds=600
 web3.logLevel=HEADERS
 web3.client-address=http://192.168.0.121:8545/
 web3.solcCmd=docker run --rm --privileged=true -v /opt/contract/:/opt/contract/ --name solc ethereum/solc
+
+
+
+
+
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 'x' FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat
+spring.datasource.tomcat.initial-size=20
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.test-on-borrow=true
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxOpenPreparedStatements=20
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.typeAliasesPackage=io.hpb.entity
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.offsetAsPageNum=false
+pagehelper.rowBoundsWithCount=false
+pagehelper.pageSizeZero=false
+pagehelper.params=count=countSql
+pagehelper.supportMethodsArguments=true
+pagehelper.autoRuntimeDialect=false
+pagehelper.closeConn=true
+spring.resources.cache.period=600
+spring.datasource.name=hpbMysql
+# com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.readUrl=jdbc:mysql://rm-uf648iqm71x4490175o.mysql.rds.aliyuncs.com:3306/hpbscan_dev?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.readUsername=admin
+spring.datasource.readPassword=admin@hpb
+#
+#47.75.252.65
+#
+spring.datasource.driver-class-name1=com.mysql.cj.jdbc.Driver
+spring.datasource.writeUrl=jdbc:mysql://rm-uf648iqm71x4490175o.mysql.rds.aliyuncs.com:3306/hpbscan_dev?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.writeUsername=admin
+spring.datasource.writePassword=admin@hpb
+
+contract.cpath= /opt/contract/
