--- a/src/main/resources/generator/generator-jdbc.properties
+++ b/src/main/resources/generator/generator-jdbc.properties
@@ -7,9 +7,9 @@ jdbc.password=admin@hpb
 #spring.datasource.readUsername=admin
 #spring.datasource.readPassword=admin@hpb
 # \u5305\u8DEF\u5F84\u914D\u7F6E
-example.package=io.hpb.bc.example
-model.package=io.hpb.bc.entity
-mapper.package=io.hpb.bc.mapper
+example.package=io.hpb.example
+model.package=io.hpb.entity
+mapper.package=io.hpb.mapper
 mapper.rootClass=io.hpb.entity.BaseEntity
 xml.package=mapper
 target.project=src/main/java
