--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,7 @@ web3.logLevel=HEADERS
 web3.client-address=http://192.168.0.121:8545/
 web3.solcCmd=docker run --rm --privileged=true -v /opt/contract/:/opt/contract/ --name solc ethereum/solc
 
-
-
-
-
+#  web3.solcCmd=docker run --rm --privileged=true -v /hpb/project/ValidateContract/:/hpb/project/ValidateContract/ --name solc ethereum/solc
 spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.minEvictableIdleTimeMillis=300000
