verified time stamp

--- a/src/main/resources/generator/generator-jdbc.properties
+++ b/src/main/resources/generator/generator-jdbc.properties
@@ -1,5 +1,6 @@
 # \u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570 
-jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://rm-uf648iqm71x4490175o.mysql.rds.aliyuncs.com:3306/hpbscan_dev?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 jdbc.username=admin
 jdbc.password=admin@hpb
